# mcdm-kit

./: .gitignore  README.md  experts_data_sample.csv  pfs_cimas_artasi.py  pyproject.toml  requirements-test.txt  test.py
docs/: README.md  comprehensive.md  fuzzy_sets.md  installation.md  methods.md  usage.md
examples/: cimas_artasi.py  fermatean_aroman.py  multi_expert.py  pfs-cimas-artasi2.py  pfs_cimas_artasi.py
mcdm_kit/: __init__.py
mcdm_kit/core/: __init__.py  arlon.py  aroman.py  artasi.py  base.py  cimas.py  dematel.py  mabac.py  topsis.py  wenslo.py  wisp.py
mcdm_kit/data/: __init__.py  decision_matrix.py  loader.py
mcdm_kit/fuzz/: __init__.py  base.py  fermatean.py  hesitant.py  interval.py  intuitionistic.py  neutrosophic.py  picture.py  pythagorean.py  spherical.py  type2.py
mcdm_kit/utils/: __init__.py  distance.py  normalization.py
tests/: test_arlon.py  test_aroman.py  test_artasi.py  test_cimas.py  test_dematel.py  test_fuzzy_sets.py  test_fuzzy_sets_integration.py  test_loader.py  test_mabac.py  test_topsis.py  test_wenslo.py  test_wisp.py
